--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#5b2e99"
       },
       "package": "com.katsuragik919.Manga"
     },
