--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
-    "expo": "~52.0.26",
+    "expo": "~52.0.28",
     "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
@@ -27,8 +28,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
